# shadowaudit-python

./: .coverage  .cursorrules  .gitignore  404.html  CHANGELOG.md  CHANGES_TO_APPLY_MANUALLY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  env-example.txt  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml
architecture/audit-chain-design/: index.html
architecture/enforcement-flow/: index.html
architecture/internal-components/: index.html
architecture/threat-model/: index.html
benchmarks/: README.md  scorer_benchmark.py
capfence/: __init__.py  check.py  cli.py  errors.py  types.py
capfence-demo/: README.md  pyproject.toml
capfence-demo/src/fintech_agent/: __init__.py
capfence-demo/src/fintech_agent/agents/: __init__.py  admin_agent.py  payment_agent.py
capfence-demo/src/fintech_agent/tools/: __init__.py  account_tools.py  payment_tools.py  readonly_tools.py
capfence-demo/tests/: test_capfence_check.py
capfence/assessment/: __init__.py  builder.py  eu_ai_act.py  owasp.py  reporter.py  scanner.py  simulator.py
capfence/cloud/: __init__.py  client.py  evaluator.py
capfence/core/: audit.py  chain.py  fsm.py  gate.py  keys.py  plugins.py  policy.py  scorer.py  state.py  taxonomy.py
capfence/flow/: __init__.py  tracer.py
capfence/framework/: _base.py  _risk.py  autogen.py  autogpt.py  babyagi.py  crewai.py  langchain.py  langgraph.py  llamaindex.py  openai_agents.py  pydanticai.py  swarm.py
capfence/mcp/: __init__.py  adapter.py  gateway.py
capfence/taxonomies/: financial_plaid.json
capfence/telemetry/: __init__.py  client.py
compliance/eu-ai-act/: index.html
compliance/governance-reporting/: index.html
compliance/owasp-agentic-top-10/: index.html
concepts/audit-chain/: index.html
concepts/fail-closed-enforcement/: index.html
concepts/policy-model/: index.html
concepts/replayability/: index.html
concepts/runtime-authorization/: index.html
concepts/trust-propagation/: index.html
docs/: CLI.md  CODE_REVIEW_WEEK13.md  POSITIONING.md  ROADMAP.md  TESTING_GUIDE.md  audit-chain.md  capabilities.md  index.md  mcp-governance.md  policies.md
docs-dev/: CLI.md  FAQ_COMPETITIVE_LANDSCAPE.md  FEATURES.md  PROJECT_REVIEW_2026-05-15.md  ROADMAP.md  SUPPORT_SLA.md  TESTING_GUIDE.md  THREAT_MODEL.md  approvals.md  architecture.md  audit-chain.md  capabilities.md  mcp-governance.md  plugins.md  policies.md  replay.md  simulation.md
docs/architecture/: audit-chain-design.md  enforcement-flow.md  internal-components.md  threat-model.md
docs/compliance/: eu-ai-act.md  governance-reporting.md  owasp-agentic-top-10.md
docs/concepts/: audit-chain.md  fail-closed-enforcement.md  policy-model.md  replayability.md  runtime-authorization.md  trust-propagation.md
docs/examples/: approval-workflows.md  database-write-gating.md  demo-cast.md  demo-walkthrough.md  demo.cast  fintech-agent.md  mcp-governance.md  replay-demo.md
docs/getting-started/: first-blocked-action.md  first-policy.md  installation.md  quickstart.md
docs/guides/: air-gapped-deployments.md  ci-cd-enforcement.md  observe-mode-rollout.md  protect-payment-agents.md  protect-shell-tools.md  replay-an-incident.md  require-human-approval.md  secure-mcp-servers.md
docs/integrations/: autogen.md  compatibility.md  crewai.md  custom-frameworks.md  langchain.md  langgraph.md  llamaindex.md  mcp.md  openai-agents-sdk.md  pydanticai.md
docs/recipes/: index.md  mcp-filesystem-allowlist.md  payments-thresholds.md  production-db-writes.md  saas-admin-approval.md  shell-tools.md
docs/reference/: audit-log-format.md  cli.md  configuration.md  flowtracer-api.md  gate-api.md  policy-schema.md
examples/: ed25519_signing_demo.py  eu_ai_act_demo.py  hash_chain_demo.py  langchain_agent.py  langgraph_demo.py  local_only.py  mcp_gateway_demo.py  telemetry_demo.py
examples/approval-workflows/: index.html
examples/autogen/: autogen_demo.py
examples/core_concepts/: ed25519_signing_demo.py  eu_ai_act_demo.py  fintech_payment_agent.py  hash_chain_demo.py  langchain_agent.py  langchain_realistic.py  langgraph_demo.py  local_only.py  openai_agents_demo.py  owasp_report_demo.py  plaid_taxonomy_demo.py  run_all_examples.py  tamper_demo.py  telemetry_demo.py
examples/crewai/: crewai_demo.py
examples/database-write-gating/: index.html
examples/fintech-agent/: index.html
examples/langchain/: langchain_demo.py
examples/mcp/: mcp_gateway_demo.py
examples/mcp-governance/: index.html
examples/openai_agents/: openai_demo.py
examples/replay-demo/: index.html
getting-started/first-blocked-action/: index.html
getting-started/first-policy/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/air-gapped-deployments/: index.html
guides/ci-cd-enforcement/: index.html
guides/observe-mode-rollout/: index.html
guides/protect-payment-agents/: index.html
guides/protect-shell-tools/: index.html
integrations/mcp/: index.html
policies/: filesystem_guard.yaml  mcp_restrictions.yaml  pci_payment_policy.yaml  pii_protection_policy.yaml  production_database_policy.yaml  production_shell_policy.yaml
scripts/: demo.sh  fix_cast_speed.py
search/: search_index.json
shadowaudit/: __init__.py  check.py  cli.py  errors.py  types.py
shadowaudit-demo/: README.md  pyproject.toml  shadowaudit-assessment-report.html
tests/: test_assessment.py  test_async_gate.py  test_builder.py  test_check.py  test_cloud_client.py  test_core_chain.py  test_core_fsm.py  test_core_gate.py  test_core_hash.py  test_core_keys.py  test_core_scorer.py  test_core_state.py  test_core_taxonomy.py  test_errors.py  test_eu_ai_act.py  test_flow_tracer.py  test_framework_adapters.py  test_framework_crewai.py  test_framework_langchain.py  test_framework_langgraph.py  test_framework_openai_agents.py  test_gate_modes.py  test_mcp.py  test_owasp.py  test_policy_engine.py  test_simulator.py  test_taxonomy_plaid.py  test_taxonomy_starters.py  test_telemetry_client.py  test_thread_safety.py
workflows/: ci.yml
(+82 files in other folders)
