[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shadowaudit"
version = "0.3.3"
description = "Runtime governance for AI agents — deterministic fail-closed enforcement. Wraps any agent tool and blocks dangerous calls before execution. Zero LLM calls, zero cloud dependencies, works offline."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Anshuman Kumar" }
]
keywords = [
    "ai",
    "agents",
    "governance",
    "safety",
    "security",
    "langchain",
    "crewai",
    "llm",
    "runtime",
    "enforcement",
    "audit",
    "compliance",
    "guardrails",
    "tool-calling",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "jinja2>=3.1",
]

[project.scripts]
shadowaudit = "shadowaudit.cli:main"

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
crewai = ["crewai>=0.30"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/AnshumanKumar14/shadowaudit-python"
Repository = "https://github.com/AnshumanKumar14/shadowaudit-python"
Issues = "https://github.com/AnshumanKumar14/shadowaudit-python/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
