[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shadowaudit"
version = "0.6.1"
description = "Runtime governance for AI agents — deterministic fail-closed enforcement. Wraps any agent tool and blocks dangerous calls before execution. Zero LLM calls, zero cloud dependencies, works offline."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Anshuman Kumar" }
]
keywords = [
    "ai",
    "agents",
    "governance",
    "safety",
    "security",
    "langchain",
    "crewai",
    "llm",
    "runtime",
    "enforcement",
    "audit",
    "compliance",
    "guardrails",
    "tool-calling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
shadowaudit = "shadowaudit.cli:main"

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
crewai = ["crewai>=0.30"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/AnshumanKumar14/shadowaudit-python"
Repository = "https://github.com/AnshumanKumar14/shadowaudit-python"
Issues = "https://github.com/AnshumanKumar14/shadowaudit-python/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = "cryptography.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "shadowaudit._native"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["shadowaudit"]

[tool.hatch.build.targets.wheel.force-include]
"shadowaudit/py.typed" = "shadowaudit/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "shadowaudit",
    "tests",
    "examples",
    "docs",
    "benchmarks",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
