[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capfence"
version = "0.7.0"
description = "Runtime governance for AI agents — deterministic fail-closed enforcement. Wraps any agent tool and blocks dangerous calls before execution. Zero LLM calls, zero cloud dependencies, works offline."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Anshuman Kumar" }
]
keywords = [
    "ai",
    "agents",
    "governance",
    "safety",
    "security",
    "langchain",
    "crewai",
    "llm",
    "runtime",
    "enforcement",
    "audit",
    "compliance",
    "guardrails",
    "tool-calling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
capfence = "capfence.cli:main"

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
crewai = ["crewai>=0.30"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://capfence.dev/"
Repository = "https://github.com/capfencelabs/capfence"
Issues = "https://github.com/capfencelabs/capfence/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = "cryptography.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "capfence._native"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["capfence"]

[tool.hatch.build.targets.wheel.force-include]
"capfence/py.typed" = "capfence/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "capfence",
    "tests",
    "examples",
    "docs",
    "benchmarks",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
