[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fintech-agent-demo"
version = "1.0.0"
description = "Realistic fintech AI agent — payment processing, account management, wire transfers. Used to test CapFence runtime governance."
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.1",
    "capfence>=0.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
